# heirloom-libcommon

./: GNUmakefile.am  autogen.sh  configure.ac  find-libcommon.m4  sighold.c  sigignore.c  signal.c  sigpause.c  sigrelse.c  sigset.c  sigset.h  wrap-sigset.h.in
include/: GNUmakefile.am
